--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,35 @@
 
 <!-- AUTH MODAL -->
 <div id="authBox" class="auth-box">
-  <input id="username" placeholder="Username">
-  <input id="password" type="password" placeholder="Password">
-  <button onclick="login()">Login</button>
-  <button onclick="register()">Register</button>
+
+  <div class="content">
+    <form onsubmit="login(); return false;">
+      <h2>Login</h2>
+
+      <div class="input-box">
+        <input type="text" id="username" placeholder="Username" required>
+      </div>
+
+      <div class="input-box">
+        <input type="password" id="password" placeholder="Password" required>
+      </div>
+
+      <div class="remember">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+        <a href="#">Forgot Password?</a>
+      </div>
+
+      <button type="submit" class="btnn">Login</button>
+
+      <div class="button">
+        <a href="#"><i class="ri-google-fill"></i> Google</a>
+        <a href="#"><i class="ri-facebook-fill"></i> Facebook</a>
+      </div>
+    </form>
+  </div>
+
 </div>
 
 <input type="file" id="fileInput" hidden>
