--- a/templates/index.html
+++ b/templates/index.html
@@ -45,10 +45,11 @@
 
       <button type="submit" class="btnn">Login</button>
 
-      <div class="button">
-        <a href="#"><i class="ri-google-fill"></i> Google</a>
-        <a href="#"><i class="ri-facebook-fill"></i> Facebook</a>
-      </div>
+      <div class="register-link">
+      <p>Don’t have an account?
+      <a href="#" onclick="register()">Register</a>
+      </p>
+     </div>
     </form>
   </div>
 
