--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,13 @@
 
 </div>
 
+<div class="footer">
+  <button>home</button>
+  <button>feed</button>
+  <button>live</button>
+  <button>update</button>
+</div>
+
 <input type="file" id="fileInput" hidden>
 
 <div id="feed"></div>
