--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
   <div class="content">
     <form onsubmit="login(); return false;">
 
-      <span class="close-btn" onclick="closeAuth()">✕</span>
+      <button type="button" class="close-btn" onclick="closeAuth()">✕</button>
 
       <h2>Login</h2>
 
