--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,10 @@
         <label>
           <input type="checkbox"> Remember me
         </label>
-        <a href="#">Forgot Password?</a>
+         <div class="forgot">
+       <a href="#" class="forgot-pwd">Forgot Password?</a>
       </div>
+     </div>
 
       <button type="submit" class="btnn">Login</button>
       
