--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,11 @@
 <header class="topbar">
   <div class="logo">six</div>
 
-  <div class="search-box">
+   <div class="search-box">
     <input id="searchInput" placeholder="Search">
-    <button onclick="search()">🔍</button>
-  </div>
+    <span class="search-icon" onclick="search()">🔍</span>
+   </div>
+
 
   <div class="right-actions">
     <button class="upload-btn" onclick="startUpload()">Upload</button>
