--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,39 @@
+.search-box {
+  position: relative;
+  width: 250px; /* adjust if needed */
+}
+
+.search-box input {
+  width: 100%;
+  padding: 10px 40px 10px 15px; /* space for icon */
+  border-radius: 20px;
+  border: 1px solid rgba(255,255,255,0.2);
+  background:
+  color: #fff;
+}
+
+.search-box input::placeholder {
+  color: rgba(255,255,255,0.6);
+}
+
+.search-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 18px;
+  opacity: 0.7;
+  transition: 0.2s;
+}
+
+.search-icon:hover {
+  opacity: 1;
+}
+
+
+
+
 body {
   margin: 0;
   background: white;
@@ -254,9 +290,11 @@ button:hover {
   border-radius: 100px;
   width: 27px;
   height: 27px;
+  align-items: center;
 }
 
 .close-btn:hover {
   background-color: blue;
   color: white;
+  align-items: center;
 }
