--- a/templates/index.html
+++ b/templates/index.html
@@ -61,12 +61,29 @@
 
 </div>
 
-<div class="footer">
-  <button>home</button>
-  <button>feed</button>
-  <button>live</button>
-  <button>update</button>
-</div>
+   <footer class="footer">
+  <div class="nav-item">
+    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/1f3e0.png">
+    <span>Home</span>
+  </div>
+
+  <div class="nav-item">
+    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/1f50d.png">
+    <span>Search</span>
+  </div>
+
+  <div class="nav-item">
+    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/2795.png">
+    <span>Add</span>
+  </div>
+
+  <div class="nav-item">
+    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/1f464.png">
+    <span>Profile</span>
+  </div>
+</footer>
+
+
 
 <input type="file" id="fileInput" hidden>
 
