--- a/static/style.css
+++ b/static/style.css
@@ -249,7 +249,7 @@ button:hover {
   background:  #0a2862;
   display: flex;
   justify-content: space-around;
-  padding: 10px 0;
+  padding: 4px 0;
   margin-left: 0px;
 }
  
@@ -260,6 +260,11 @@ button:hover {
   color: white;
   font-size: 12px;
   cursor: pointer;
+}
+
+.nav-item {
+  transition: 0.2s ease;
+  padding: 6px 10px;
 }
  
 .nav-item img {
