--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
     <span>Search</span>
   </div>
 
-  <div class="nav-item">
+  <div class="nav-item" class="addButton">
     <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/2795.png">
     <span>Add</span>
   </div>
