--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
   <div class="right-actions">
     <button class="upload-btn" onclick="startUpload()">Upload</button>
     <div class="profile-icon" onclick="toggleAuth()">👤</div>
+    <div class="menu-icon" onclick="goToSettings()">☰</div>
   </div>
 </header>
 
