--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-  <div class="settings-page">
-    <button class="close-btn" onclick="closeSettings()">✕</button>
-    <h2>Settings</h2>
+  <div id="settingsPanel" class="settings-page">
+  <button type="button" class="close-btn" id="closeSettingsBtn" onclick="closeBtn()">✕</button>
+  <h2>Settings</h2>
 
-    <div class="setting-item">Account</div>
-    <div class="setting-item">Privacy</div>
-    <div class="setting-item">Security</div>
-    <div class="setting-item">Logout</div>
-  </div>
+  <div class="setting-item">Account</div>
+  <div class="setting-item">Privacy</div>
+  <div class="setting-item">Security</div>
+  <div class="setting-item">Logout</div>
+</div>
 
 </body>
 </html>
