--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@
   background: none;
   border: none;
   color: white;
-  font-size: 22px;
+  font-size: 40px;
   cursor: pointer;
 }
 
@@ -34,19 +34,21 @@
 .settings-page h2 {
   margin-bottom: 20px;
   text-align: center;
+  font-size: 40px;
 }
 
 .setting-item {
   background: rgba(255,255,255,0.08);
-  padding: 15px;
+  padding: 40px;
   border-radius: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 35px;
   cursor: pointer;
   text-align: center;
+  font-size: 25px;
 }
 
 .setting-item:hover {
-  background: rgba(255,255,255,0.15);
+  background-color: green;
 }
 
 .addButton {
