--- a/templates/settings.html
+++ b/templates/settings.html
@@ -7,7 +7,7 @@
 <body>
 
   <div id="settingsPanel" class="settings-page">
-  <button type="button" class="close-btn" id="closeSettingsBtn" onclick="closeBtn()">✕</button>
+  <button type="button" class="close-bttn" id="closeSettingsBtn" onclick="closeBtn()">✕</button>
   <h2>Settings</h2>
 
   <div class="setting-item">Account</div>
