--- a/templates/index.html
+++ b/templates/index.html
@@ -69,8 +69,8 @@
   </div>
 
   <div class="nav-item">
-    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/1f50d.png">
-    <span>Search</span>
+    <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji/assets/72x72/1f514.png">
+    <span>Wave</span>
   </div>
 
   <div class="nav-item" class="addButton">
