--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,7 @@
   top: 0;
   right: 0;              /* slide in from right */
   left: 0;
-  height: vh;         /* full height */
+  height: 100vh;         /* full height */
   width: ;            /* covers ~55% of screen */
   background-color: #0a0f2c;  /* dark blue-black */
   color: white;
